force-app/main/default/objects/Team__c/fields/AccreditedBuyerRepresentative__c.field-meta.xml
<CustomField>
    <fullName>AccreditedBuyerRepresentative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accredited Buyer Representative</label>
    <type>Checkbox</type>
</CustomField>