force-app/main/default/objects/Team__c/fields/ActiveRainURL__c.field-meta.xml
<CustomField>
    <fullName>ActiveRainURL__c</fullName>
    <label>Active Rain URL</label>
    <type>Url</type>
</CustomField>