force-app/main/default/objects/Team__c/fields/AdvancedDistributionCommercial__c.field-meta.xml
<CustomField>
    <fullName>AdvancedDistributionCommercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Distribution Commercial</label>
    <type>Checkbox</type>
</CustomField>