force-app/main/default/objects/Team__c/fields/AdvancedDistributionRentals__c.field-meta.xml
<CustomField>
    <fullName>AdvancedDistributionRentals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Distribution Rentals</label>
    <type>Checkbox</type>
</CustomField>