force-app/main/default/objects/Team__c/fields/AdvancedDistributionSales__c.field-meta.xml
<CustomField>
    <fullName>AdvancedDistributionSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Distribution Sales</label>
    <type>Checkbox</type>
</CustomField>