force-app/main/default/objects/Team__c/fields/AgentTypes__c.field-meta.xml
<CustomField>
    <fullName>AgentTypes__c</fullName>
    <label>Agent Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>