force-app/main/default/objects/Team__c/fields/AlternativePhone__c.field-meta.xml
<CustomField>
    <fullName>AlternativePhone__c</fullName>
    <label>Alternative Phone</label>
    <type>Phone</type>
</CustomField>