force-app/main/default/objects/Team__c/fields/AlternativePhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>AlternativePhoneExtension__c</fullName>
    <label>Alternative Phone Extension</label>
    <type>Phone</type>
</CustomField>