force-app/main/default/objects/Team__c/fields/AlternativePhoneType__c.field-meta.xml
<CustomField>
    <fullName>AlternativePhoneType__c</fullName>
    <label>Alternative Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>