force-app/main/default/objects/Team__c/fields/AutoAssignable__c.field-meta.xml
<CustomField>
    <fullName>AutoAssignable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Assignable</label>
    <type>Checkbox</type>
</CustomField>