force-app/main/default/objects/Team__c/fields/AutoImportNewGoogleContacts__c.field-meta.xml
<CustomField>
    <fullName>AutoImportNewGoogleContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Import New Google Contacts</label>
    <type>Checkbox</type>
</CustomField>