force-app/main/default/objects/Team__c/fields/AutoImportNewOffice365Contacts__c.field-meta.xml
<CustomField>
    <fullName>AutoImportNewOffice365Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Import New Office 365 Contacts</label>
    <type>Checkbox</type>
</CustomField>