force-app/main/default/objects/Team__c/fields/AutoSyncGoogleContacts__c.field-meta.xml
<CustomField>
    <fullName>AutoSyncGoogleContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Sync Google Contacts</label>
    <type>Checkbox</type>
</CustomField>