force-app/main/default/objects/Team__c/fields/AutoSyncOffice365Contacts__c.field-meta.xml
<CustomField>
    <fullName>AutoSyncOffice365Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Sync Office 365 Contacts</label>
    <type>Checkbox</type>
</CustomField>