force-app/main/default/objects/Team__c/fields/BackAgentGuid__c.field-meta.xml
<CustomField>
    <fullName>BackAgentGuid__c</fullName>
    <externalId>true</externalId>
    <label>Back Office GUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>