force-app/main/default/objects/Team__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <label>Bio</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>