force-app/main/default/objects/Team__c/fields/BlogURL__c.field-meta.xml
<CustomField>
    <fullName>BlogURL__c</fullName>
    <label>Blog URL</label>
    <type>Url</type>
</CustomField>