force-app/main/default/objects/Team__c/fields/ClickToClaimCommercial__c.field-meta.xml
<CustomField>
    <fullName>ClickToClaimCommercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Click To Claim Commercial</label>
    <type>Checkbox</type>
</CustomField>