force-app/main/default/objects/Team__c/fields/ClickToClaimRentals__c.field-meta.xml
<CustomField>
    <fullName>ClickToClaimRentals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Click To Claim Rentals</label>
    <type>Checkbox</type>
</CustomField>