force-app/main/default/objects/Team__c/fields/ClickToClaimSales__c.field-meta.xml
<CustomField>
    <fullName>ClickToClaimSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Click To Claim Sales</label>
    <type>Checkbox</type>
</CustomField>