force-app/main/default/objects/Team__c/fields/DisplayPendingProperties__c.field-meta.xml
<CustomField>
    <fullName>DisplayPendingProperties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Pending Properties</label>
    <type>Checkbox</type>
</CustomField>