force-app/main/default/objects/Team__c/fields/DisplayRentedProperties__c.field-meta.xml
<CustomField>
    <fullName>DisplayRentedProperties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Rented Properties</label>
    <type>Checkbox</type>
</CustomField>