force-app/main/default/objects/Team__c/fields/DisplaySoldProperties__c.field-meta.xml
<CustomField>
    <fullName>DisplaySoldProperties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Sold Properties</label>
    <type>Checkbox</type>
</CustomField>