force-app/main/default/objects/Team__c/fields/EmailLeadNotifications__c.field-meta.xml
<CustomField>
    <fullName>EmailLeadNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Lead Notifications</label>
    <type>Checkbox</type>
</CustomField>