force-app/main/default/objects/Team__c/fields/EmailMarketing__c.field-meta.xml
<CustomField>
    <fullName>EmailMarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Marketing</label>
    <type>Checkbox</type>
</CustomField>