force-app/main/default/objects/Team__c/fields/EmailSignature__c.field-meta.xml
<CustomField>
    <fullName>EmailSignature__c</fullName>
    <label>Email Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>