force-app/main/default/objects/Team__c/fields/FacebookURL__c.field-meta.xml
<CustomField>
    <fullName>FacebookURL__c</fullName>
    <label>Facebook URL</label>
    <type>Url</type>
</CustomField>