force-app/main/default/objects/Team__c/fields/FaxExtension__c.field-meta.xml
<CustomField>
    <fullName>FaxExtension__c</fullName>
    <label>Fax Extension</label>
    <type>Phone</type>
</CustomField>