force-app/main/default/objects/Team__c/fields/FeaturedDisplay__c.field-meta.xml
<CustomField>
    <fullName>FeaturedDisplay__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Featured Display</label>
    <type>Checkbox</type>
</CustomField>