force-app/main/default/objects/Team__c/fields/FlickrURL__c.field-meta.xml
<CustomField>
    <fullName>FlickrURL__c</fullName>
    <label>Flickr URL</label>
    <type>Url</type>
</CustomField>