force-app/main/default/objects/Team__c/fields/FoursquareURL__c.field-meta.xml
<CustomField>
    <fullName>FoursquareURL__c</fullName>
    <label>Foursquare URL</label>
    <type>Url</type>
</CustomField>