force-app/main/default/objects/Team__c/fields/Honorific__c.field-meta.xml
<CustomField>
    <fullName>Honorific__c</fullName>
    <label>Honorific</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>