force-app/main/default/objects/Team__c/fields/InstagramURL__c.field-meta.xml
<CustomField>
    <fullName>InstagramURL__c</fullName>
    <label>Instagram URL</label>
    <type>Url</type>
</CustomField>