force-app/main/default/objects/Team__c/fields/LeadManagement__c.field-meta.xml
<CustomField>
    <fullName>LeadManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Management</label>
    <type>Checkbox</type>
</CustomField>