force-app/main/default/objects/Team__c/fields/LeadRouterCompanyId__c.field-meta.xml
<CustomField>
    <fullName>LeadRouterCompanyId__c</fullName>
    <label>Lead Router Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>