force-app/main/default/objects/Team__c/fields/LeadRouterId__c.field-meta.xml
<CustomField>
    <fullName>LeadRouterId__c</fullName>
    <label>Lead Router ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>