force-app/main/default/objects/Team__c/fields/LeadRouterTrained__c.field-meta.xml
<CustomField>
    <fullName>LeadRouterTrained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Router Trained</label>
    <type>Checkbox</type>
</CustomField>