force-app/main/default/objects/Team__c/fields/LicenseDate__c.field-meta.xml
<CustomField>
    <fullName>LicenseDate__c</fullName>
    <label>License Date</label>
    <type>Date</type>
</CustomField>