force-app/main/default/objects/Team__c/fields/LicenseNumber2__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumber2__c</fullName>
    <label>License Number (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>