force-app/main/default/objects/Team__c/fields/LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumber__c</fullName>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>