force-app/main/default/objects/Team__c/fields/LinkedinURL__c.field-meta.xml
<CustomField>
    <fullName>LinkedinURL__c</fullName>
    <label>Linkedin URL</label>
    <type>Url</type>
</CustomField>