force-app/main/default/objects/Team__c/fields/ListAgentPhotoURL__c.field-meta.xml
<CustomField>
    <fullName>ListAgentPhotoURL__c</fullName>
    <label>List Agent Photo URL</label>
    <type>Url</type>
</CustomField>