force-app/main/default/objects/Team__c/fields/MobilePhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>MobilePhoneExtension__c</fullName>
    <label>Mobile Phone Extension</label>
    <type>Phone</type>
</CustomField>