force-app/main/default/objects/Team__c/fields/NARRealtor__c.field-meta.xml
<CustomField>
    <fullName>NARRealtor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NAR Realtor</label>
    <type>Checkbox</type>
</CustomField>