force-app/main/default/objects/Team__c/fields/OfficePhone__c.field-meta.xml
<CustomField>
    <fullName>OfficePhone__c</fullName>
    <label>Office Phone</label>
    <type>Phone</type>
</CustomField>