force-app/main/default/objects/Team__c/fields/OfficePhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>OfficePhoneExtension__c</fullName>
    <label>Office Phone Extension</label>
    <type>Phone</type>
</CustomField>