force-app/main/default/objects/Team__c/fields/PinterestURL__c.field-meta.xml
<CustomField>
    <fullName>PinterestURL__c</fullName>
    <label>Pinterest URL</label>
    <type>Url</type>
</CustomField>