force-app/main/default/objects/Team__c/fields/PlaxoURL__c.field-meta.xml
<CustomField>
    <fullName>PlaxoURL__c</fullName>
    <label>Plaxo URL</label>
    <type>Url</type>
</CustomField>