force-app/main/default/objects/Team__c/fields/PrimaryOffice__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>