force-app/main/default/objects/Team__c/fields/ProfessionalTitle__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalTitle__c</fullName>
    <label>Professional Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>