force-app/main/default/objects/Team__c/fields/ProfilePhotoURL__c.field-meta.xml
<CustomField>
    <fullName>ProfilePhotoURL__c</fullName>
    <label>Profile Photo URL</label>
    <type>Url</type>
</CustomField>