force-app/main/default/objects/Team__c/fields/Promoted__c.field-meta.xml
<CustomField>
    <fullName>Promoted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promoted</label>
    <type>Checkbox</type>
</CustomField>