force-app/main/default/objects/Team__c/fields/RealtorInstituteGraduate__c.field-meta.xml
<CustomField>
    <fullName>RealtorInstituteGraduate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Realtor Institute Graduate</label>
    <type>Checkbox</type>
</CustomField>