force-app/main/default/objects/Team__c/fields/ReferralAndRelocationCertificate__c.field-meta.xml
<CustomField>
    <fullName>ReferralAndRelocationCertificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral And Relocation Certificate</label>
    <type>Checkbox</type>
</CustomField>