force-app/main/default/objects/Team__c/fields/RentalDisplayOption__c.field-meta.xml
<CustomField>
    <fullName>RentalDisplayOption__c</fullName>
    <label>Rental Display Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>combined</fullName>
            </value>
            <value>
                <fullName>separated</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>