force-app/main/default/objects/Team__c/fields/RfgAgentGuid__c.field-meta.xml
<CustomField>
    <fullName>RfgAgentGuid__c</fullName>
    <label>RFG Agent GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>