force-app/main/default/objects/Team__c/fields/RfgAgentId__c.field-meta.xml
<CustomField>
    <fullName>RfgAgentId__c</fullName>
    <label>RFG Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>