force-app/main/default/objects/Team__c/fields/RfgOfficeGuid__c.field-meta.xml
<CustomField>
    <fullName>RfgOfficeGuid__c</fullName>
    <label>RFG Office GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>