force-app/main/default/objects/Team__c/fields/SendDailyRentalSearches__c.field-meta.xml
<CustomField>
    <fullName>SendDailyRentalSearches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Daily Rental Searches</label>
    <type>Checkbox</type>
</CustomField>