force-app/main/default/objects/Team__c/fields/SendDailySearches__c.field-meta.xml
<CustomField>
    <fullName>SendDailySearches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Daily Searches</label>
    <type>Checkbox</type>
</CustomField>