force-app/main/default/objects/Team__c/fields/SendDigestEmail__c.field-meta.xml
<CustomField>
    <fullName>SendDigestEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Digest Email</label>
    <type>Checkbox</type>
</CustomField>