force-app/main/default/objects/Team__c/fields/SMSLeadNotifications__c.field-meta.xml
<CustomField>
    <fullName>SMSLeadNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Lead Notifications</label>
    <type>Checkbox</type>
</CustomField>