force-app/main/default/objects/Team__c/fields/SoldDateRangeId__c.field-meta.xml
<CustomField>
    <fullName>SoldDateRangeId__c</fullName>
    <label>Sold Date Range ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>