force-app/main/default/objects/Team__c/fields/SoldListingSort__c.field-meta.xml
<CustomField>
    <fullName>SoldListingSort__c</fullName>
    <label>Sold Listing Sort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sold_date</fullName>
            </value>
            <value>
                <fullName>sold_price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>