force-app/main/default/objects/Team__c/fields/StreetLine2__c.field-meta.xml
<CustomField>
    <fullName>StreetLine2__c</fullName>
    <label>Street (Line2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>