force-app/main/default/objects/Team__c/fields/TeamSiteURL__c.field-meta.xml
<CustomField>
    <fullName>TeamSiteURL__c</fullName>
    <label>Team Site URL</label>
    <type>Url</type>
</CustomField>