force-app/main/default/objects/Team__c/fields/TransactionPointUsername__c.field-meta.xml
<CustomField>
    <fullName>TransactionPointUsername__c</fullName>
    <label>Transaction Point Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>