force-app/main/default/objects/Team__c/fields/TumblrURL__c.field-meta.xml
<CustomField>
    <fullName>TumblrURL__c</fullName>
    <label>Tumblr URL</label>
    <type>Url</type>
</CustomField>