force-app/main/default/objects/Team__c/fields/TwitterURL__c.field-meta.xml
<CustomField>
    <fullName>TwitterURL__c</fullName>
    <label>Twitter URL</label>
    <type>Url</type>
</CustomField>