force-app/main/default/objects/Team__c/fields/VideoCode__c.field-meta.xml
<CustomField>
    <fullName>VideoCode__c</fullName>
    <label>Video Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>