force-app/main/default/objects/Team__c/fields/VimeoURL__c.field-meta.xml
<CustomField>
    <fullName>VimeoURL__c</fullName>
    <label>Vimeo URL</label>
    <type>Url</type>
</CustomField>