force-app/main/default/objects/Team__c/fields/WebsiteURL2__c.field-meta.xml
<CustomField>
    <fullName>WebsiteURL2__c</fullName>
    <label>Website URL (2)</label>
    <type>Url</type>
</CustomField>