force-app/main/default/objects/Team__c/fields/YelpURL__c.field-meta.xml
<CustomField>
    <fullName>YelpURL__c</fullName>
    <label>Yelp URL</label>
    <type>Url</type>
</CustomField>