force-app/main/default/objects/Team__c/fields/YglUserId__c.field-meta.xml
<CustomField>
    <fullName>YglUserId__c</fullName>
    <label>You Got Listings User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>