force-app/main/default/objects/Team__c/fields/YoutubeURL__c.field-meta.xml
<CustomField>
    <fullName>YoutubeURL__c</fullName>
    <label>Youtube URL</label>
    <type>Url</type>
</CustomField>