force-app/main/default/objects/Team__c/listViews/All_teams.listView-meta.xml
<ListView>
    <fullName>All_teams</fullName>
    <columns>NAME</columns>
    <columns>WebsiteId__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>All teams</label>
</ListView>